# ararajuba-sdk

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
ararajuba/: Cargo.toml
ararajuba/src/: lib.rs
core/ai/: CHANGELOG.md  Cargo.toml
core/ai/src/: error.rs  lib.rs
core/ai/src/agent/: agent.rs  agent_ui_stream.rs  mod.rs  tool_loop.rs
core/ai/src/chat/: chat.rs  direct_transport.rs  mod.rs  transport.rs  types.rs
core/ai/src/embed/: embed.rs  mod.rs  options.rs  result.rs
core/ai/src/generate_image/: generate_image.rs  mod.rs
core/ai/src/generate_object/: generate_object.rs  mod.rs  options.rs  output.rs  stream_object.rs
core/ai/src/generate_speech/: generate_speech.rs  mod.rs
core/ai/src/generate_text/: callbacks.rs  generate_text.rs  mod.rs  options.rs  prepare_step.rs  result.rs  stream_text.rs
core/ai/src/generate_video/: generate_video.rs
core/ai/src/middleware/: mod.rs  wrap_embedding_model.rs  wrap_image_model.rs  wrap_language_model.rs  wrap_provider.rs
core/ai/src/middleware/builtins/: add_tool_input_examples.rs  default_settings.rs  extract_json.rs  extract_reasoning.rs  mod.rs  simulate_streaming.rs
core/ai/src/registry/: mod.rs  model_registry.rs
core/ai/src/rerank/: mod.rs  rerank.rs
core/ai/src/telemetry/: config.rs  mod.rs  record.rs
core/ai/src/tools/: dynamic_tool.rs  mod.rs  tool.rs  tool_approval.rs  tool_call.rs  tool_result.rs  tool_set.rs
core/ai/src/transcribe/: transcribe.rs
core/ai/src/types/: call_settings.rs  call_warning.rs  finish_reason.rs  mod.rs  provider_metadata.rs  schema.rs
core/ai/src/ui/: chunk.rs  convert.rs  mod.rs  reader.rs  response.rs  stream.rs  types.rs  validate.rs
core/ai/src/util/: consume_stream.rs  cosine_similarity.rs  data_url.rs  deep_equal.rs  id.rs  mod.rs  parse_partial_json.rs  prune_messages.rs  serial_executor.rs  simulate_readable_stream.rs  smooth_stream.rs
core/mcp/: CHANGELOG.md  Cargo.toml
core/mcp/src/: client.rs  error.rs  lib.rs  tools.rs  types.rs
core/mcp/src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
core/provider/: CHANGELOG.md  Cargo.toml
core/provider-utils/: CHANGELOG.md  Cargo.toml
core/provider-utils/src/: api_key.rs  headers.rs  id.rs  lib.rs  user_agent.rs
core/provider-utils/src/http/: get_from_api.rs  mod.rs  post_to_api.rs  response_handler.rs  retry.rs
core/provider-utils/src/parsing/: json_repair.rs  mod.rs  parse_event_stream.rs  parse_json.rs
core/provider/src/: errors.rs  json_value.rs  lib.rs  provider.rs  shared.rs
core/provider/src/embedding_model/v3/: call_options.rs  embedding_model_v3.rs  mod.rs  result.rs
core/provider/src/embedding_model/v4/: embedding_model_v4.rs  mod.rs
core/provider/src/image_model/v3/: image_model_v3.rs  mod.rs
core/provider/src/image_model/v4/: image_model_v4.rs  mod.rs
core/provider/src/language_model/v3/: call_options.rs  content.rs  content_part.rs  finish_reason.rs  generate_result.rs  language_model_v3.rs  mod.rs  prompt.rs  stream_part.rs  stream_result.rs  tool.rs  tool_choice.rs  usage.rs
core/provider/src/language_model/v4/: call_options.rs  capabilities.rs  compat.rs  language_model_v4.rs  mod.rs  stream_result.rs
core/provider/src/reranking_model/v3/: mod.rs  reranking_model_v3.rs
core/provider/src/reranking_model/v4/: mod.rs  reranking_model_v4.rs
core/provider/src/speech_model/v3/: mod.rs  speech_model_v3.rs
core/provider/src/speech_model/v4/: mod.rs  speech_model_v4.rs
core/provider/src/transcription_model/v3/: mod.rs  transcription_model_v3.rs
core/provider/src/transcription_model/v4/: mod.rs  transcription_model_v4.rs
core/provider/src/video_model/v3/: mod.rs  video_model_v3.rs
core/provider/src/video_model/v4/: mod.rs  video_model_v4.rs
providers/anthropic/: CHANGELOG.md  Cargo.toml
providers/anthropic/src/: error.rs  lib.rs  provider.rs
providers/anthropic/src/chat/: chat_model.rs  convert_messages.rs  finish_reason.rs  mod.rs  options.rs  prepare_tools.rs
providers/deepseek/: CHANGELOG.md  Cargo.toml
providers/deepseek/src/: lib.rs  provider.rs
providers/deepseek/src/chat/: chat_model.rs  mod.rs  options.rs
providers/google/: CHANGELOG.md  Cargo.toml
providers/google/src/: error.rs  lib.rs  provider.rs
providers/google/src/chat/: chat_model.rs  convert_messages.rs  finish_reason.rs  mod.rs  options.rs  prepare_tools.rs
providers/google/src/embedding/: embedding_model.rs  mod.rs
providers/google/src/image/: google_image_model.rs  google_image_options.rs  mod.rs
providers/google/src/video/: google_video_model.rs  google_video_options.rs  mod.rs
providers/openai/: CHANGELOG.md  Cargo.toml
providers/openai-compatible/: CHANGELOG.md  Cargo.toml
providers/openai-compatible/src/: error.rs  lib.rs  provider.rs
providers/openai-compatible/src/chat/: chat_model.rs  convert_messages.rs  finish_reason.rs  mod.rs  prepare_tools.rs  usage.rs
providers/openai-compatible/src/embedding/: embedding_model.rs  mod.rs
providers/openai/src/: capabilities.rs  lib.rs  provider.rs
providers/openai/src/chat/: chat_model.rs  mod.rs  options.rs
providers/openai/src/embedding/: embedding_model.rs  mod.rs
providers/openai/src/image/: mod.rs  openai_image_model.rs  openai_image_options.rs
providers/openai/src/responses/: mod.rs  openai_responses_language_model.rs  openai_responses_options.rs
providers/openai/src/speech/: mod.rs  openai_speech_model.rs  openai_speech_options.rs
providers/openai/src/transcription/: mod.rs  openai_transcription_model.rs  openai_transcription_options.rs
tools/coding/: CHANGELOG.md  Cargo.toml
tools/coding/src/: lib.rs
tools/coding/src/analysis/: diagnostics.rs  mod.rs
tools/coding/src/fs/: find.rs  list.rs  mod.rs  patch.rs  read.rs  search.rs  write.rs
tools/coding/src/git/: add.rs  branch.rs  checkout.rs  clone.rs  commit.rs  diff.rs  log.rs  mod.rs  pull.rs  push.rs  status.rs
tools/coding/src/shell/: exec.rs  mod.rs
