[package]
name = "ararajuba-core"
version = "0.1.0"
edition = "2024"
description = "High-level AI SDK functions for Ararajuba"
license = "Apache-2.0"
repository = "https://github.com/atlantichq/ararajuba-sdk"

[dependencies]
ararajuba-provider = { version = "0.2.0", path = "../provider" }
ararajuba-provider-utils = { version = "0.1.0", path = "../provider-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
regex-lite = "0.1"
base64 = "0.22"
urlencoding = "2"
async-stream = "0.3"