[package]
name = "ararajuba-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP (Model Context Protocol) client for Ararajuba AI SDK"
license = "Apache-2.0"

[dependencies]
ararajuba-provider = { version = "0.2.0", path = "../provider" }
ararajuba-provider-utils = { version = "0.1.0", path = "../provider-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
