[package]
name = "ararajuba-provider-utils"
version = "0.1.0"
edition = "2024"
description = "Shared HTTP/JSON utilities for building AI providers"
license = "Apache-2.0"
repository = "https://github.com/structlylabs/ararajuba-sdk"

[dependencies]
ararajuba-provider = { version = "0.2.0", path = "../provider" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
pin-project = "1"
async-trait = "0.1"
tracing = "0.1"
