[package]
name = "ararajuba-deepseek"
version = "0.1.0"
edition = "2024"
description = "DeepSeek provider for Ararajuba AI SDK"
license = "Apache-2.0"
repository = "https://github.com/structlylabs/ararajuba-sdk"

[dependencies]
ararajuba-provider = { version = "0.2.0", path = "../../core/provider" }
ararajuba-provider-utils = { version = "0.1.0", path = "../../core/provider-utils" }
ararajuba-openai-compatible = { version = "0.2.0", path = "../openai-compatible" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
