[package]
name = "ararajuba-google"
version = "0.2.2"
edition = "2024"
description = "Google Generative AI (Gemini) provider for Ararajuba AI SDK"
license = "Apache-2.0"
repository = "https://github.com/atlantichq/ararajuba-sdk"

[dependencies]
ararajuba-provider = { version = "0.2.2", path = "../../core/provider" }
ararajuba-provider-utils = { version = "0.1.2", path = "../../core/provider-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
