[package]
name = "ararajuba-openai-compatible"
version = "0.2.0"
edition = "2024"
description = "Shared base for OpenAI-compatible AI providers"
license = "Apache-2.0"

[dependencies]
ararajuba-provider = { version = "0.2.0", path = "../../core/provider" }
ararajuba-provider-utils = { version = "0.1.0", path = "../../core/provider-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
